--- a/Client/package.json
+++ b/Client/package.json
@@ -19,6 +19,7 @@
     "react-native": "^0.73.6",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-gradle-plugin": "^0.71.19",
+    "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
